remove code dir

--- a/polybar/hack/config.ini
+++ b/polybar/hack/config.ini
@@ -170,6 +170,11 @@ modules-center = cpu sep memory sep filesystem
 modules-right = date sep volume 
 enable-ipc = true
 
+[bar/left]
+inherit = bar/main
+bottom = true
+monitor = HDMI-0
+
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 ; The separator will be inserted between the output of each module
