--- a/polybar/hack/config.ini
+++ b/polybar/hack/config.ini
@@ -33,49 +33,18 @@ include-file = ~/.config/polybar/hack/user_modules.ini
 ;; Bar Settings
 
 [bar/main]
-; Use either of the following command to list available outputs:
-; If unspecified, the application will pick the first one it finds.
-; $ polybar -m | cut -d ':' -f 1
-; $ xrandr -q | grep " connected" | cut -d ' ' -f1
-monitor =
-
-; Use the specified monitor as a fallback if the main one is not found.
-monitor-fallback =
-
-; Require the monitor to be in connected state
-; XRandR sometimes reports my monitor as being disconnected (when in use)
 monitor-strict = false
-
-; Tell the Window Manager not to configure the window.
-; Use this to detach the bar if your WM is locking its size/position.
-override-redirect = false
+override-redirect = true
 
 ; Put the bar at the bottom of the screen
 bottom = false
 
-; Prefer fixed center position for the `modules-center` block
-; When false, the center position will be based on the size of the other blocks.
 fixed-center = true
 
-; Dimension defined as pixel value (e.g. 35) or percentage (e.g. 50%),
-; the percentage can optionally be extended with a/top]
-; inherit = bar/main
-; ; border-bottom-size = 2
-; border-bottom-color = ${color.primary}
-; modules-left = launcher sep title
-; modules-center = workspaces
-; modules-right = color-switch sep battery sep checknet sep date sep sysmenu
-; enable-ipc = true
-
-width = 100%
-height = 26
-
-; Offset defined as pixel value (e.g. 35) or percentage (e.g. 50%)
-; the percentage can optionally be extended with a pixel offset like so:
-; 50%:-10, this will result in an offset in the x or y direction 
-; of 50% minus 10 pixels
-offset-x = 0
-offset-y = 0
+width = 98%
+height = 32
+offset-x = 1%
+offset-y = 20
 
 ; Background ARGB color (e.g. #f00, #ff992a, #ddff1023)
 background = ${color.background}
@@ -83,76 +52,20 @@ background = ${color.background}
 ; Foreground ARGB color (e.g. #f00, #ff992a, #ddff1023)
 foreground = ${color.foreground}
 
-; Background gradient (vertical steps)
-;   background-[0-9]+ = #aarrggbb
-;;background-0 = 
+radius-top = 8
+radius-bottom = 8
 
-; Value used for drawing rounded corners
-; Note: This shouldn't be used together with border-size because the border 
-; doesn't get rounded
-; Individual top/bottom values can be defined using:
-;   radius-{top,bottom}
-radius-top = 0
-radius-bottom = 0
-
-; Under-/overline pixel size and argb color
-; Individual values can be defined using:
-;   {overline,underline}-size
-;   {overline,underline}-color
-underline-size = 2
-underline-color = ${color.foreground}
-
-; Values applied to all borders
-; Individual side values can be defined using:
-;   border-{left,top,right,bottom}-size
-;   border-{left,top,right,bottom}-color
-; The top and bottom borders are added to the bar height, so the effective
-; window height is:
-;   height + border-top-size + border-bottom-size
-; Meanwhile the effective window width is defined entirely by the width key and
-; the border is placed withing this area. So you effectively only have the
-; following horizontal space on the bar:
-;   width - border-right-size - border-left-size
-;border-bottom-size = 2
-;border-bottom-color = ${color.primary}
-
-; Number of spaces to add at the beginning/end of the bar
-; Individual side values can be defined using:
-;   padding-{left,right}
-padding = 1
-
-; Number of spaces to add before/after each module
-; Individual side values can be defined using:
-;   module-margin-{left,right}
+padding = 3
 module-margin-left = 0
 module-margin-right = 0
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-; Fonts are defined using <font-name>;<vertical-offset>
-; Font names are specified using a fontconfig pattern.
-;   font-0 = NotoSans-Regular:size=8;2
-;   font-1 = MaterialIcons:size=10
-;   font-2 = Termsynu:size=8;-1
-;   font-3 = FontAwesome:size=10
-; See the Fonts wiki page for more details
 
 font-0 = "Helvetica:pixelsize=10;3"
 font-1 = "Iosevka Nerd Font:pixelsize=12;4"
 
-; Modules are added to one of the available blocks
-;   modules-left = cpu ram
-;   modules-center = xwindow xbacklight
-;   modules-right = ipc clock
-
-;modules-left = launcher workspaces google github reddit gmail twitter
-;modules-center = 
-;modules-right = mpd updates alsa battery network date sysmenu
-
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 ; [bar/top]
-; inherit = bar/main
+; inherit = bar/mainbar/
 ; ; border-bottom-size = 2
 ; border-bottom-color = ${color.primary}
 ; modules-left = launcher sep title
@@ -160,20 +73,30 @@ font-1 = "Iosevka Nerd Font:pixelsize=12;4"
 ; modules-right = color-switch sep battery sep checknet sep date sep sysmenu
 ; enable-ipc = true
 
-[bar/center]
+[bar/bottom]
 inherit = bar/main
 bottom = true
-border-top-size = 2
-border-top-color = ${color.primary}
-modules-left = i3 sep workspaces
-modules-center = cpu sep memory sep filesystem
-modules-right = date sep volume 
+modules-left = i3
+modules-center = date
 enable-ipc = true
+monitor = DP-4
 
 [bar/left]
 inherit = bar/main
 bottom = true
 monitor = HDMI-0
+modules-left= i3
+modules-center = cpu sep memory
+modules-right = date sep volume 
+
+[bar/right]
+inherit = bar/main
+bottom = true
+modules-left = i3
+modules-center = date
+enable-ipc = true
+monitor = DP-0
+
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
@@ -193,15 +116,7 @@ wm-name =
 ; Expects a valid libc locale, for example: sv_SE.UTF-8
 locale = 
 
-; Position of the system tray window
-; If empty or undefined, tray support will be disabled
-; NOTE: A center aligned tray will cover center aligned modules
-;
-; Available positions:
-;   left
-;   center
-;   right
-;   none
+
 tray-position = none
 
 ; If true, the bar will not shift its
@@ -236,7 +151,7 @@ tray-scale = 1.0
 ; Currently supported WM's:
 ;   bspwm
 ;   i3 (requires: `override-redirect = true`)
-;;wm-restack =
+wm-restack = i3
 
 ; Set a DPI values used when rendering text
 ; This only affects scalable fonts
